Small changes part 2

--- a/part2.ipynb
+++ b/part2.ipynb
@@ -34,7 +34,7 @@
    "source": [
     "# Extract IMDB dataset\n",
     "imdb, info = tfds.load(\"imdb_reviews\", with_info=True, as_supervised=True, shuffle_files=False)\n",
-    "train_texts, test_texts = imdb['train'], imdb['test']"
+    "train_data, test_data = imdb['train'], imdb['test']"
    ]
   },
   {
@@ -66,7 +66,7 @@
    "outputs": [],
    "source": [
     "# Tokenize\n",
-    "tokenizer = Tokenizer(num_words=num_words, oov_token=oov_token)\n",
+    "tokenizer = Tokenizer(num_words=n_words, oov_token=oov_token)\n",
     "tokenizer.fit_on_texts(train_texts)\n",
     "train_sequences = tokenizer.texts_to_sequences(train_texts)\n",
     "test_sequences = tokenizer.texts_to_sequences(test_texts)"
@@ -121,6 +121,15 @@
    "outputs": [],
    "source": [
     "#model.predict(test_sequences)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.layers[0].get_weights()[0].shape"
    ]
   }
  ],
