Started data generation

--- a/cnn/part2.ipynb
+++ b/cnn/part2.ipynb
@@ -17,6 +17,24 @@
     "    https://storage.googleapis.com/mledu-datasets/cats_and_dogs_filtered.zip \\\n",
     "    -O /tmp/cats_and_dogs_filtered.zip"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "import zipfile\n",
+    "import tensorflow as tf\n",
+    "from tensorflow.keras.optimizers import RMSprop\n",
+    "from tensorflow.keras.preprocessing.image import ImageDataGenerator\n",
+    "\n",
+    "local_zip = '/tmp/cats_and_dogs_filtered.zip'\n",
+    "zip_ref = zipfile.ZipFile(local_zip, 'r')\n",
+    "zip_ref.extractall('/tmp')\n",
+    "zip_ref.close()"
+   ]
   }
  ],
  "metadata": {
