--- a/cnn/part2.ipynb
+++ b/cnn/part2.ipynb
@@ -1,61 +1,248 @@
 {
- "cells": [
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Image Generator example"
-   ]
+  "nbformat": 4,
+  "nbformat_minor": 0,
+  "metadata": {
+    "kernelspec": {
+      "display_name": "Python 3",
+      "language": "python",
+      "name": "python3"
+    },
+    "language_info": {
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.7.3"
+    },
+    "colab": {
+      "name": "part2.ipynb",
+      "provenance": []
+    }
   },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!wget --no-check-certificate \\\n",
-    "    https://storage.googleapis.com/mledu-datasets/cats_and_dogs_filtered.zip \\\n",
-    "    -O /tmp/cats_and_dogs_filtered.zip"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import os\n",
-    "import zipfile\n",
-    "import tensorflow as tf\n",
-    "from tensorflow.keras.optimizers import RMSprop\n",
-    "from tensorflow.keras.preprocessing.image import ImageDataGenerator\n",
-    "\n",
-    "local_zip = '/tmp/cats_and_dogs_filtered.zip'\n",
-    "zip_ref = zipfile.ZipFile(local_zip, 'r')\n",
-    "zip_ref.extractall('/tmp')\n",
-    "zip_ref.close()"
-   ]
-  }
- ],
- "metadata": {
-  "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
-   "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.7.3"
-  }
- },
- "nbformat": 4,
- "nbformat_minor": 4
+  "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "1qKXN9QADRJH",
+        "colab_type": "text"
+      },
+      "source": [
+        "# Image Generator example\n",
+        "\n",
+        "! Built to work on Google Colab !"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "vOdrnGBZDRJJ",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "!wget --no-check-certificate \\\n",
+        "    https://storage.googleapis.com/mledu-datasets/cats_and_dogs_filtered.zip \\\n",
+        "    -O /tmp/cats_and_dogs_filtered.zip"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "ef-k6PMKGKvc",
+        "colab_type": "text"
+      },
+      "source": [
+        "### Setup"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "XenwdMAcDRJM",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "import os\n",
+        "import zipfile\n",
+        "import tensorflow as tf\n",
+        "from tensorflow.keras.optimizers import RMSprop\n",
+        "from tensorflow.keras.preprocessing.image import ImageDataGenerator"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "agrBYcBMF1Ll",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "batch_size = 20\n",
+        "img_dim = (150, 150)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "oawI6n_WGPdi",
+        "colab_type": "text"
+      },
+      "source": [
+        "### Data"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "NPHjvLsQDcpv",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "# Extract data\n",
+        "local_zip = '/tmp/cats_and_dogs_filtered.zip'\n",
+        "zip_ref = zipfile.ZipFile(local_zip, 'r')\n",
+        "zip_ref.extractall('/tmp')\n",
+        "zip_ref.close()"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "GLIPBjUxD019",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "# Paths to different directories\n",
+        "base_dir = '/tmp/cats_and_dogs_filtered'\n",
+        "train_dir = os.path.join(base_dir, 'train')\n",
+        "validation_dir = os.path.join(base_dir, 'validation')\n",
+        "train_cats_dir = os.path.join(train_dir, 'cats')\n",
+        "train_dogs_dir = os.path.join(train_dir, 'dogs')\n",
+        "validation_cats_dir = os.path.join(validation_dir, 'cats')\n",
+        "validation_dogs_dir = os.path.join(validation_dir, 'dogs')"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "1QHptMdZD6W7",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "# Create the images generator\n",
+        "train_datagen = ImageDataGenerator(rescale=1./255)\n",
+        "test_datagen = ImageDataGenerator(rescale=1./255)\n",
+        "train_generator = train_datagen.flow_from_directory(\n",
+        "        train_dir,\n",
+        "        target_size=img_dim,\n",
+        "        batch_size=batch_size,\n",
+        "        class_mode='binary')\n",
+        "validation_generator = test_datagen.flow_from_directory(\n",
+        "        validation_dir,\n",
+        "        target_size=img_dim,\n",
+        "        batch_size=batch_size,\n",
+        "        class_mode='binary')"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "asDgtmpQGT6V",
+        "colab_type": "text"
+      },
+      "source": [
+        "### Model"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "TFiC1LIAGbIv",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "# Create model graph\n",
+        "model = tf.keras.models.Sequential([\n",
+        "    tf.keras.layers.Conv2D(32, (3,3), activation='relu', input_shape=(150, 150, 3)),\n",
+        "    tf.keras.layers.MaxPooling2D(2, 2),\n",
+        "    tf.keras.layers.Conv2D(64, (3,3), activation='relu'),\n",
+        "    tf.keras.layers.MaxPooling2D(2,2),\n",
+        "    tf.keras.layers.Conv2D(128, (3,3), activation='relu'),\n",
+        "    tf.keras.layers.MaxPooling2D(2,2),\n",
+        "    tf.keras.layers.Flatten(),\n",
+        "    tf.keras.layers.Dense(512, activation='relu'),\n",
+        "    tf.keras.layers.Dense(1, activation='sigmoid')\n",
+        "])\n",
+        "model.summary()"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ZjPXwTRgGtVo",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "model.compile(loss='binary_crossentropy',\n",
+        "              optimizer=RMSprop(lr=1e-4),\n",
+        "              metrics=['acc'])\n"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "LRpqjQ9bGzE1",
+        "colab_type": "text"
+      },
+      "source": [
+        "### Train"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ZJs69VLwG0Rg",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "history = model.fit_generator(\n",
+        "      train_generator,\n",
+        "      steps_per_epoch=100,  # 2000 images = batch_size * steps\n",
+        "      epochs=10,\n",
+        "      validation_data=validation_generator,\n",
+        "      validation_steps=50,  # 1000 images = batch_size * steps\n",
+        "      verbose=1)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    }
+  ]
 }
